# Epsilon-Intersection

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt
cmake/: epsilonConfig.cmake.in
doc/: .gdbinit  epsilon_pretty_gdb_load.py  epsilon_pretty_printing.py  quaternion_transform.wxm
include/: config.hpp  config.inl  elementarytypes.hpp
include/ei/: 2dfunctions.hpp  2dintersection.hpp  2dtypes.hpp  3dfunctions.hpp  3dintersection.hpp  3dtypes.hpp  algorithm.hpp  config.hpp  configure.hpp  conversions.hpp  defaultconfig.hpp  dualquaternion.hpp  elementarytypes.hpp  fixedpoint.hpp  matrix.hpp  prime.hpp  quaternion.hpp  stdextensions.hpp  vector.hpp
include/ei/details/: 2dfunctions.inl  2dtypes.inl  3dfunctions.inl  3dintersection.inl  3dtypes.inl  config.inl  elementary.inl  inttemplate.hpp  matrix.inl  matrixcomponents.hpp  matrixutililities.hpp  primetest.hpp  quaternion.inl  vectordetailsA.hpp  vectordetailsB.hpp  vectortypedef.hpp
include/gam/: config.hpp  config.inl  elementarytypes.hpp  matrix.hpp
include/gam/details/: config.inl  elementary.inl  inttemplate.hpp  matrix.inl  matrixcomponents.hpp
src/: 2dintersection.cpp  2dtypes.cpp  3dfunctions.cpp  3dintersection.cpp  3dtypes.cpp  elementary.cpp
unittest/: conversions.cpp  dualquaternion.cpp  elementarytypes.cpp  fixedpoint.cpp  intersection2d.cpp  intersection3d.cpp  main.cpp  matrix.cpp  performance3d.hpp  prime.cpp  quaternion.cpp  stdextensions.cpp  types2d.cpp  types3d.cpp  unittest.cpp  unittest.hpp
